** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
* Switching last instrumentations (`trace_methods`, sparkjava, JDK `HttpServer` and Struts 2) to
`TracerAwareInstrumentation` - {pull}#2170[#2170]
* Replace concurrency plugin maps to `SpanConcurrentHashMap` ones - {pull}#2173[#2173]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Breaking changes
* Stop collecting the field `http.request.socket.encrypted` in http requests - {pull}2136[#2136]

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]
* ECS log reformatting improvements - {pull}1910[#1910]
** Automatically sets `service.node.name` in all log events if set through agent configuration
** Add `log_ecs_reformatting_additional_fields` option to support arbitrary fields in logs
** Automatically serialize markers as tags where relevant (log4j2 and logback)
* gRPC spans (client and server) can detect errors or cancellation through custom listeners - {pull}2067[#2067]
* Add `-download-agent-version` to the agent <<setup-attach-cli-usage-options, attach CLI tool options>>, allowing the
user to configure an arbitrary agent version that will be downloaded from maven and attached - {pull}1959[#1959]
* Add extra check to detect improper agent setup - {pull}2076[#2076]

[float]
===== Performance improvements
* Reduce GC time overhead caused by WeakReferences - {pull}2086[#2086], {pull}2081[#2081]
* Reduced memory overhead by a smarter type pool caching strategy - {pull}2102[#2102]. +
  The type pool cache improves the startup times by speeding up type matching
  (determining whether a class that's about to be loaded should be instrumented).