@@ -18,6 +18,7 @@
  */
 package co.elastic.apm.agent.report;
 
+import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.report.ssl.SslUtils;
 import co.elastic.apm.agent.util.UrlConnectionUtils;
 import co.elastic.apm.agent.util.Version;
@@ -65,7 +66,6 @@ import java.util.concurrent.atomic.AtomicInteger;
 public class ApmServerClient {
 
     private static final Logger logger = LoggerFactory.getLogger(ApmServerClient.class);
-    private static final String USER_AGENT = "elasticapm-java/" + VersionUtils.getAgentVersion();
     private static final Version VERSION_6_7 = Version.of("6.7.0");
     private static final Version VERSION_7_9 = Version.of("7.9.0");
     private static final Version VERSION_7_0 = Version.of("7.0.0");
@@ -77,9 +77,12 @@ public class ApmServerClient {
     private final AtomicInteger errorCount = new AtomicInteger();
     private final ApmServerHealthChecker healthChecker;
 
-    public ApmServerClient(ReporterConfiguration reporterConfiguration) {
+    private final String userAgent;
+
+    public ApmServerClient(ReporterConfiguration reporterConfiguration, CoreConfiguration coreConfiguration) {
         this.reporterConfiguration = reporterConfiguration;
         this.healthChecker = new ApmServerHealthChecker(this);
+        this.userAgent = getUserAgent(coreConfiguration);
     }
 
     public void start() {
@@ -159,7 +162,7 @@ public class ApmServerClient {
             connection.setRequestProperty("Authorization", authHeaderValue);
         }
 
-        connection.setRequestProperty("User-Agent", USER_AGENT);
+        connection.setRequestProperty("User-Agent", userAgent);
         connection.setConnectTimeout((int) reporterConfiguration.getServerTimeout().getMillis());
         connection.setReadTimeout((int) reporterConfiguration.getServerTimeout().getMillis());
         return (HttpURLConnection) connection;
@@ -320,7 +323,7 @@ public class ApmServerClient {
         return isAtLeast(VERSION_7_9);
     }
 
-    public boolean supportsNumericUrlPort(){
+    public boolean supportsNumericUrlPort() {
         return isAtLeast(VERSION_7_0);
     }
 
@@ -357,7 +360,7 @@ public class ApmServerClient {
         /**
          * Gets the {@link HttpURLConnection} after the connection has been established and returns a result,
          * for example the status code or the response body.
-         *
+         * <p>
          * NOTE: do not call {@link InputStream#close()} as that is handled by {@link ApmServerClient}
          *
          * @param connection the connection
@@ -368,4 +371,18 @@ public class ApmServerClient {
         T withConnection(HttpURLConnection connection) throws IOException;
     }
 
+    private static String getUserAgent(CoreConfiguration coreConfiguration) {
+        StringBuilder userAgent = new StringBuilder();
+        userAgent.append("apm-agent-java/").append(VersionUtils.getAgentVersion());
+        String serviceName = coreConfiguration.getServiceName();
+        String serviceVersion = coreConfiguration.getServiceVersion();
+        if (!serviceName.isEmpty()) {
+            userAgent.append(" (").append(serviceName);
+            if (serviceVersion != null && !serviceVersion.isEmpty()) {
+                userAgent.append(" ").append(serviceVersion);
+            }
+            userAgent.append(")");
+        }
+        return userAgent.toString();
+    }
 }
